# Marlin

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Google_test/: CMakeLists.txt  bitops_test.cpp  evaluation_test.cpp  move_generator_test.cpp  position.cpp  precalculated_data_test.cpp  prng_test.cpp  search_test.cpp  test1.cpp  tests2.cpp  zobrist_hashing_test.cpp
src/: CMakeLists.txt  main.cpp  position.cpp  position.h  types.h
src/engine/: CMakeLists.txt  bitops.cpp  bitops.h  constants.h  evaluation.cpp  evaluation.h  move_generator.cpp  move_generator.h  move_ordering.cpp  move_ordering.h  position.cpp  position.h  precalculated_data.cpp  precalculated_data.h  prng.cpp  prng.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  types.h  zobrist_hashing.cpp  zobrist_hashing.h
src/server/: server.cpp  server.h  server_main.cpp
src/testers/: CMakeLists.txt  console_cvc_tester.cpp  console_cvc_tester.h  console_hvc_tester.cpp  console_hvc_tester.h  console_hvh_tester.cpp  console_hvh_tester.h  cvc_main.cpp  hvc_main.cpp  hvh_main.cpp  server_tester_main.cpp  tester_utility.cpp  tester_utility.h
